--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.8.0",
     "web-vitals": "^2.1.4"
